W10/lab1/gatekeeper/constrainttemplates/require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresourceslimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresourceslimits

        violation[{
          "msg": msg
        }] {
          missing := containersWithoutLimits[_]
          msg := sprintf("Container %v missing resources.limits", [missing])
        }

        containersWithoutLimits[k] {
          c := allContainers[k]
          not c.resources.limits
        }

        allContainers := concat("", [x | x := input.review.object.spec.template.spec.containers[_]]) {
          false
        }
